--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,12 @@ highlight:
   wrap: true
   hljs: false
 
+prism_plugin:
+  mode: 'realtime'    # realtime/preprocess
+  theme: 'atom-dark'
+  line_number: true    # default false
+  custom_css:
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -95,10 +101,44 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-matery
 
+# 搜索
+search:
+  path: search.xml
+  field: post
+
+# 中文链接转拼音
+permalink_pinyin:
+  enable: true
+  separator: '-' # default: '-'
+  
+# 文章字数统计插件
+postInfo:
+  date: true
+  update: false
+  wordCount: false # 设置文章字数统计为 true.
+  totalCount: false # 设置站点文章总字数统计为 true.
+  min2read: false # 阅读时长.
+  readCount: false # 阅读次数.
+  
+# 添加emoji表情支持
+githubEmojis:
+  enable: true
+  className: github-emoji
+  inject: true
+  styles:
+  customEmojis:
+
+# 添加 RSS 订阅支持
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
-  repo: https://afishtail.github.io/blogs
-  # example, https://github.com/hexojs/hexojs.github.io
-  branch: gh-pages
